--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-component-simple",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A simple, isolated react component",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "babel src/ --ignore __test__/ --out-dir dist",
     "lint": "./node_modules/.bin/eslint .eslintrc.json",
+    "prepublish": "npm run lint && npm run test && npm run build",
     "test": "./node_modules/tape/bin/tape src/**/__test__/**/test-*.js"
   },
   "keywords": [
@@ -16,8 +17,8 @@
   "author": "Shaun Warman",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "eslint": "^3.11.1",
@@ -25,8 +26,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
-    "tape": "^4.6.3",
-    "webpack": "^1.13.3"
+    "tape": "^4.6.3"
   },
   "dependencies": {
     "react": "^15.4.1"
