Use ava and enzyme for testing

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "A simple, isolated react component",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src/ --ignore __test__/ --out-dir dist",
+    "build": "babel src/ --out-dir dist",
     "lint": "./node_modules/.bin/eslint .eslintrc.json",
-    "prepublish": "npm run lint && npm run test && npm run build",
-    "test": "./node_modules/tape/bin/tape src/**/__test__/**/test-*.js"
+    "test": "ava dist/**/__test__/**/test-*.js"
   },
   "keywords": [
     "react",
@@ -17,16 +16,19 @@
   "author": "Shaun Warman",
   "license": "ISC",
   "devDependencies": {
+    "ava": "^0.17.0",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
-    "tape": "^4.6.3"
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "dependencies": {
     "react": "^15.4.1"
